--- a/cell01/ex05/tab.html
+++ b/cell01/ex05/tab.html
@@ -15,11 +15,13 @@
 
         #c1 {
             background-color: lightblue;
+            width: 50%;
             
         }
 
         #c2 {
             background-color: lightcoral;
+            width: 50%;
         }
 
         
