--- a/cell02/ex00/responsive.html
+++ b/cell02/ex00/responsive.html
@@ -11,8 +11,8 @@
 <body>
     <table>
         <tr>
-            <th id="c1">First Cell</th>
-            <th id="c2">Second Cell</th>
+            <td id="c1">First Cell</td>
+            <td id="c2">Second Cell</td>
         </tr>
     </table>
 </body>
