--- a/rush/index.html
+++ b/rush/index.html
@@ -9,14 +9,14 @@
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #f8bbd0; /* สีชมพูหวาน */
+            background-color: #f8bbd0;
             color: #6a4e23;
             text-align: center;
         }
 
         h1 {
             font-family: 'Pacifico', cursive;
-            color: #ff66b2; /* สีชมพูสดใสของบาร์บี้ */
+            color: #ff66b2;
             margin-top: 50px;
             font-size: 3em;
         }
